# ahlan-commerce

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.worker  Makefile  README.md  atlas.hcl  cornucopia.toml  mprocs.yaml  notes.md
.tools/: .crates.toml  .crates2.json
apps/admin/: package-lock.json  package.json
apps/admin/src/api/: graphql.ts
apps/admin/src/components/: ProductForm.tsx
apps/admin/src/hooks/: useCreateProduct.ts
apps/api/: Cargo.toml
apps/api/src/: adapter.rs  config.rs  dto.rs  error.rs  graphql.rs  handlers.rs  lib.rs  main.rs  openapi.rs  routes.rs
apps/worker/src/: main.rs
db/migrations/: atlas.sum
db/queries/products/: create_product.sql  list_products.sql  list_published_products.sql  update_product_publication.sql
docs/: commands.md  dal.md  deployment-prep.md  deployment.md  local-runtime.md  operations.md
src/: catalog.rs  main.rs
